[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/GameSpace.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/GameOverMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/levelup.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/ui/Countdown.tscn" type="PackedScene" id=8]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="LevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 600, 800 )
transparent_bg = true
handle_input_locally = false
msaa = 2
render_target_update_mode = 3

[node name="GameSpace" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Countdown" parent="." instance=ExtResource( 8 )]

[node name="GameOverMenu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="timeout" from="EnemyTimer" to="." method="make_enemy"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="finished" from="Countdown" to="." method="_on_Countdown_finished"]
